--- a/banana-collector.ipynb
+++ b/banana-collector.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# automatically reload python modules if there is a change\n",
     "# See https://ipython.org/ipython-doc/3/config/extensions/autoreload.html\n",
@@ -28,10 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Imports\n",
+    "import numpy as np\n",
+    "from unityagents import UnityEnvironment"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,6 +42,439 @@
     "# Udacity Banana Collector\n",
     "\n",
     "This project demonstrates how to train an agent to collect bananas in a room using Deep Q-Networks algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\t\n",
+      "Unity brain name: BananaBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 37\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: discrete\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an environment\n",
+    "env = UnityEnvironment(file_name='Banana_Linux/Banana.x86')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Environments contain brains which are responsible for deciding the actions of their associated agents. Here we check for the first brain available, and set it as the default brain we will be controlling from Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BananaBrain']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.brain_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BananaBrain': <unityagents.brain.BrainParameters at 0x7fc83909e550>}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.brains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<unityagents.brain.BrainParameters at 0x7fc83909e550>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brain_name = 'BananaBrain'\n",
+    "brain = env.brains[brain_name]\n",
+    "brain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Action Space\n",
+    "\n",
+    "The agent can take one of 4 possible actions.\n",
+    "\n",
+    "- 0 - walk forward\n",
+    "- 1 - walk backward\n",
+    "- 2 - turn left\n",
+    "- 3 - turn right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'discrete'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brain.vector_action_space_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The number of possible actions\n",
+    "n_actions = brain.vector_action_space_size\n",
+    "n_actions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### State Space\n",
+    "\n",
+    "The state space has 37 dimensions and contains the agent's velocity along with ray-based perception of objects around agent's forward direction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'continuous'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brain.vector_observation_space_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The number of state dimensions\n",
+    "n_state_dims = brain.vector_observation_space_size\n",
+    "n_state_dims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BananaBrain': <unityagents.brain.BrainInfo at 0x7fc83909e048>}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reset the environment\n",
+    "env_info = env.reset(train_mode=True)\n",
+    "env_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<unityagents.brain.BrainInfo at 0x7fc83909eef0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# There is only one available brain\n",
+    "env_info = env.reset(train_mode=True)[brain_name]\n",
+    "env_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 1.        , 0.        , 0.        , 0.16895212,\n",
+       "        0.        , 1.        , 0.        , 0.        , 0.20073597,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.12865657,\n",
+       "        0.        , 1.        , 0.        , 0.        , 0.14938059,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.58185619,\n",
+       "        0.        , 1.        , 0.        , 0.        , 0.16089135,\n",
+       "        0.        , 1.        , 0.        , 0.        , 0.31775284,\n",
+       "        0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_info.vector_observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 37)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_info.vector_observations.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore the environment using a random agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reset the environment\n",
+    "env_info = env.reset(train_mode=False)[brain_name]\n",
+    "\n",
+    "# Get the current state\n",
+    "state = env_info.vector_observations[0]\n",
+    "\n",
+    "# Initialize the score\n",
+    "score = 0\n",
+    "\n",
+    "# Keep exploring until done == True\n",
+    "done = False\n",
+    "while not done:\n",
+    "    \n",
+    "    # Select a random action\n",
+    "    action = np.random.randint(n_actions)\n",
+    "    \n",
+    "    # Take the action\n",
+    "    env_info = env.step(action)[brain_name]\n",
+    "    \n",
+    "    # Observe the result\n",
+    "    next_state = env_info.vector_observations[0]\n",
+    "    reward = env_info.rewards[0]\n",
+    "    done = env_info.local_done[0]\n",
+    "    \n",
+    "    # Accumulate the reward to the score\n",
+    "    score += reward\n",
+    "    \n",
+    "    # Prepare the state for the next action\n",
+    "    state = next_state\n",
+    "    \n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.        , 0.        , 0.        , 0.04178659,\n",
+       "        0.        , 0.        , 1.        , 0.        , 0.21819802,\n",
+       "        0.        , 0.        , 0.        , 1.        , 0.        ,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.39524487,\n",
+       "        0.        , 0.        , 1.        , 0.        , 0.58369923,\n",
+       "        0.        , 0.        , 0.        , 1.        , 0.        ,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.21722141,\n",
+       "        0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_info.vector_observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_info.rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_info.local_done"
    ]
   },
   {
@@ -152,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
