DQNAgent passes one episode run

--- a/banana-collector.ipynb
+++ b/banana-collector.ipynb
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "{'BananaBrain': <unityagents.brain.BrainParameters at 0x7fc83909e550>}"
+       "{'BananaBrain': <unityagents.brain.BrainParameters at 0x7fe165158518>}"
       ]
      },
      "execution_count": 5,
@@ -141,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "<unityagents.brain.BrainParameters at 0x7fc83909e550>"
+       "<unityagents.brain.BrainParameters at 0x7fe165158518>"
       ]
      },
      "execution_count": 6,
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "'discrete'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "'continuous'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "37"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'BananaBrain': <unityagents.brain.BrainInfo at 0x7fc83909e048>}"
+       "{'BananaBrain': <unityagents.brain.BrainInfo at 0x7fe165158160>}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<unityagents.brain.BrainInfo at 0x7fc83909eef0>"
+       "<unityagents.brain.BrainInfo at 0x7fe1651583c8>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "        0.        , 0.        ]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "(1, 37)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,16 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,23 +412,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.        , 0.        , 0.        , 0.        , 0.04178659,\n",
-       "        0.        , 0.        , 1.        , 0.        , 0.21819802,\n",
-       "        0.        , 0.        , 0.        , 1.        , 0.        ,\n",
-       "        1.        , 0.        , 0.        , 0.        , 0.39524487,\n",
-       "        0.        , 0.        , 1.        , 0.        , 0.58369923,\n",
-       "        0.        , 0.        , 0.        , 1.        , 0.        ,\n",
-       "        1.        , 0.        , 0.        , 0.        , 0.21722141,\n",
+       "array([[0.        , 0.        , 1.        , 0.        , 0.16101955,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.04571758,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.29598179,\n",
+       "        0.        , 0.        , 1.        , 0.        , 0.14599232,\n",
+       "        0.        , 0.        , 1.        , 0.        , 0.16776823,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.04420976,\n",
+       "        1.        , 0.        , 0.        , 0.        , 0.05423063,\n",
        "        0.        , 0.        ]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "[0.0]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "[True]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,6 +499,56 @@
     "  * $\\theta$ is periodically copied to $\\bar{\\theta}$.\n",
     "  * Mini-batches are sampled uniformly from the experience replay."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from agent import DQNAgent\n",
+    "\n",
+    "dqnagent = DQNAgent(state_size=n_state_dims, n_actions=n_actions, batch_size=5)\n",
+    "\n",
+    "score = 0\n",
+    "\n",
+    "env_info = env.reset(train_mode=True)[brain_name]\n",
+    "state = env_info.vector_observations[0]\n",
+    "done = 0\n",
+    "\n",
+    "while not done:\n",
+    "    action = dqnagent.choose_action(state)\n",
+    "    env_info = env.step(action)[brain_name]\n",
+    "    dqnagent.observe_and_learn(\n",
+    "        state=state,\n",
+    "        action=action,\n",
+    "        reward=env_info.rewards[0],\n",
+    "        next_state=env_info.vector_observations[0],\n",
+    "        done=env_info.local_done[0])\n",
+    "    score += env_info.rewards[0]\n",
+    "    done = env_info.local_done[0]\n",
+    "    state = env_info.vector_observations[0]\n",
+    "\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
