--- a/banana-collector.ipynb
+++ b/banana-collector.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# automatically reload python modules if there is a change\n",
     "# See https://ipython.org/ipython-doc/3/config/extensions/autoreload.html\n",
@@ -47,6 +38,161 @@
     "# Udacity Banana Collector\n",
     "\n",
     "This project demonstrates how to train an agent to collect bananas in a room using Deep Q-Networks algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unityagents import UnityEnvironment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment\n",
+    "\n",
+    "The environment is a modified version of Unity ML-Agents [Banana-Collector][banana-collector].\n",
+    "\n",
+    "[banana-collector]: https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Learning-Environment-Examples.md#banana-collector\n",
+    "\n",
+    "### Goal\n",
+    "\n",
+    "The goal of the agent is to collect yellow bananas though avoiding blue bananas. The environment is considered to be solved when the average return for the consecutive 100 episode is over 13.\n",
+    "\n",
+    "### Reward\n",
+    "\n",
+    "The agent gets +1 reward when it reaches a yellow banana and -1 when it does a blue one.\n",
+    "\n",
+    "* +1 - yellow banana\n",
+    "* -1 - blue banana\n",
+    "\n",
+    "### Observation Space\n",
+    "\n",
+    "The observation space has 37 dimensions and contains the agent's velocity plus ray-based perception of objects around the agent's forward direction.\n",
+    "\n",
+    "### Action Space\n",
+    "\n",
+    "Based on the observation, the agent needs to learn how to best select actions. Four discrete actions are available:\n",
+    "\n",
+    "* 0 - move forward\n",
+    "* 1 - move backward\n",
+    "* 2 - turn left\n",
+    "* 3 - turn right\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\t\n",
+      "Unity brain name: BananaBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 37\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: discrete\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating an environment\n",
+    "env = UnityEnvironment('Banana_Windows_x86_64/Banana.exe')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Environments contain **_brains_** which are responsible for deciding the actions of their associated agents. Here we check for the first brain available, and set it as the default brain we will be controlling from Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BananaBrain': <unityagents.brain.BrainParameters at 0x213ea1f1048>}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.brains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BananaBrain']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.brain_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<unityagents.brain.BrainParameters at 0x213ea1f1048>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brain_name = 'BananaBrain'\n",
+    "brain = env.brains[brain_name]\n",
+    "brain"
    ]
   },
   {
@@ -152,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
